sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:9: error: forward reference extends over definition of variable k
		while (v < getValeur(k) && k >= 0) {
                                     ^